--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
                 <h1 style="padding: 10px 20px 20px 0px;">Popular Test Series</h1>
             </div>
             <div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; gap: 20px;">
-                <div class="test-card">NEET Rank Booster</div>
+                <div class="test-card" onclick="goToNEETTest()">NEET Rank Booster</div>
                 <div class="test-card">JEE Rank Booster</div>
                 <div class="test-card">UPSC Test Series</div>
                 <div class="test-card">BPSC Test Series</div>
